--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-16 09:37+0200\n"
+"PO-Revision-Date: 2025-05-16 10:05+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -30036,7 +30036,7 @@ msgstr ""
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2782
 msgid "&gt; and &lt; _scale by:"
-msgstr "&gt; och &lt; _skalas av:"
+msgstr "&gt; och &lt; _skalas med:"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2783
 msgid "Pressing > or < scales selection up or down by this increment"
@@ -40090,7 +40090,7 @@ msgstr "Om den är inställd visas en rektangulär sidram."
 
 #: ../share/ui/page-properties.glade:835
 msgid "Always on top"
-msgstr "Alltid ö&verst"
+msgstr "Alltid överst"
 
 #: ../share/ui/page-properties.glade:837
 msgid "If set, the page border is always on top of the drawing."
