--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-16 10:05+0200\n"
+"PO-Revision-Date: 2025-05-16 10:07+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -1631,7 +1631,7 @@ msgstr "Pixelverktyg"
 
 #: ../build/share/filters/filters.svg.h:596
 msgid "Reduce or remove antialiasing around shapes"
-msgstr "Minska eller ta bort antialiasing runt former"
+msgstr "Minska eller ta bort kantutjämning runt former"
 
 #: ../build/share/filters/filters.svg.h:598
 msgid "Basic Diffuse Bump"
@@ -9231,7 +9231,7 @@ msgstr "Ange heltal för PNG-komprimeringsnivå (0 (ingen) till 9 (max))"
 
 #: ../src/actions/actions-output.cpp:317
 msgid "Enter integer for PNG antialiasing level (0 (none) to 3 (best))"
-msgstr "Ange heltal för PNG-antialiasingnivå (0 (ingen) till 3 (bäst))"
+msgstr "Ange heltal för PNG-kantutjämningsnivå (0 (ingen) till 3 (bäst))"
 
 #: ../src/actions/actions-pages.cpp:95
 #: ../src/actions/actions-selection-object.cpp:145
@@ -13539,7 +13539,7 @@ msgstr "Bredd"
 #: ../src/extension/internal/filter/morphology.h:71
 #: ../src/extension/internal/filter/morphology.h:196
 msgid "Antialiasing"
-msgstr "Antialiasing"
+msgstr "Kantutjämning"
 
 #: ../src/extension/internal/filter/morphology.h:72
 msgid "Blur content"
@@ -13915,7 +13915,7 @@ msgstr "Efter mättnad"
 
 #: ../src/extension/internal/filter/paint.h:865
 msgid "Simulate antialiasing"
-msgstr "Simulera antialiasing"
+msgstr "Simulera kantutjämning"
 
 #: ../src/extension/internal/filter/paint.h:873
 msgid "Poster and painting effects"
@@ -24303,7 +24303,7 @@ msgstr "Växla sidans skugga"
 
 #: ../src/ui/dialog/document-properties.cpp:558
 msgid "Toggle anti-aliasing"
-msgstr "Växla anti-aliasing"
+msgstr "Växla kantutjämning"
 
 #: ../src/ui/dialog/document-properties.cpp:561
 msgid "Toggle clip to page mode"
@@ -40119,12 +40119,12 @@ msgstr "Allt som inte finns på en sida kommer inte att visas"
 
 #: ../share/ui/page-properties.glade:884
 msgid "Use antialiasing"
-msgstr "Använd antialiasing"
+msgstr "Använd kantutjämning"
 
 #: ../share/ui/page-properties.glade:886
 msgid "If unset, no antialiasing will be done on the drawing."
 msgstr ""
-"Om den inte är inställd kommer ingen antialiasing att göras på ritningen."
+"Om den inte är inställd kommer ingen kantutjämning att göras på ritningen."
 
 #: ../share/ui/pattern-edit.glade:114
 msgid "Gap control"
