--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-16 15:51+0200\n"
+"PO-Revision-Date: 2025-05-16 16:09+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -3969,7 +3969,7 @@ msgstr "Parkering"
 #: ../build/share/symbols/symbols.h:101 ../build/share/symbols/symbols.h:102
 msgctxt "Symbol"
 msgid "No Parking"
-msgstr "Ej parkering"
+msgstr "Inte parkering"
 
 #: ../build/share/symbols/symbols.h:103 ../build/share/symbols/symbols.h:104
 msgctxt "Symbol"
@@ -3979,7 +3979,7 @@ msgstr "Inga hundar"
 #: ../build/share/symbols/symbols.h:105 ../build/share/symbols/symbols.h:106
 msgctxt "Symbol"
 msgid "No Entry"
-msgstr "Ej ingång"
+msgstr "Inte ingång"
 
 #: ../build/share/symbols/symbols.h:107 ../build/share/symbols/symbols.h:108
 #: ../build/share/symbols/symbols.h:382 ../build/share/symbols/symbols.h:394
@@ -11092,7 +11092,7 @@ msgstr "Tom eller olämplig egenskap, hoppar över."
 
 #: ../src/display/control/ctrl-handle-styling.cpp:333
 msgid "Unrecognized property '%1'"
-msgstr "Ej identifierad egenskap '%1'"
+msgstr "Inte identifierad egenskap '%1'"
 
 #: ../src/display/control/snap-indicator.cpp:43
 #: ../src/display/control/snap-indicator.cpp:68
@@ -15969,7 +15969,7 @@ msgstr ""
 
 #: ../src/inkscape-application.cpp:657
 msgid "METHOD"
-msgstr "BETALAS VIA"
+msgstr "METOD"
 
 #
 # File: ../src/inkscape-application.cpp, line: 545
@@ -21178,7 +21178,7 @@ msgstr "Länka objektets parameter till sökvägen"
 
 #: ../src/live_effects/parameter/satellite.cpp:275
 msgid "Link to item on clipboard"
-msgstr "Länk till objekt på klippbordet"
+msgstr "Länk till objekt på urklippet"
 
 #: ../src/live_effects/parameter/satellitearray.cpp:89
 #: ../src/ui/dialog/inkscape-preferences.cpp:2064
@@ -22219,8 +22219,7 @@ msgstr "Välj <b>kloner</b> för att koppla om."
 
 #: ../src/selection-chemistry.cpp:2593
 msgid "Copy an <b>object</b> to clipboard to relink clones to."
-msgstr ""
-"Kopiera ett <b>objekt</b> till klippbordet för att koppla om kloner till."
+msgstr "Kopiera ett <b>objekt</b> till urklippet för att koppla om kloner till."
 
 #: ../src/selection-chemistry.cpp:2652
 msgid "<b>No clones to relink</b> in the selection."
@@ -22657,7 +22656,7 @@ msgstr "Välj <b>en flödad text för att avflöda</b> den."
 
 #: ../src/text-chemistry.cpp:562
 msgid "Unflow flowed text"
-msgstr "Ej flödad flödad text"
+msgstr "Inte flödad flödad text"
 
 #: ../src/text-chemistry.cpp:640
 msgid "Select <b>text(s)</b> to convert to glyphs."
@@ -22770,7 +22769,7 @@ msgstr "Urklipp innehåller inte en slinga."
 
 #: ../src/ui/clipboard.cpp:1082
 msgid "Clipboard does not contain any objects of type \"%1\"."
-msgstr "Klippbordet innehåller inga objekt av typen \"%1\"."
+msgstr "Urklipp innehåller inga objekt av typen \"%1\"."
 
 #: ../src/ui/contextmenu.cpp:81 ../share/ui/menus.ui:134
 msgid "Cu_t"
@@ -24098,7 +24097,7 @@ msgstr "_Dokumentresurser"
 
 #: ../src/ui/dialog/dialog-data.cpp:60
 msgid "_Paint Servers"
-msgstr "_Målning av servrar"
+msgstr "_Målarservrar"
 
 #: ../src/ui/dialog/dialog-data.cpp:63
 msgid "_Selectors and CSS"
@@ -24592,7 +24591,7 @@ msgstr "Marginaler upptill och nedtill"
 
 #: ../src/ui/dialog/document-properties.cpp:1838
 msgid "An_gle X:"
-msgstr "An_gle X:"
+msgstr "Vinke_l X:"
 
 #: ../src/ui/dialog/document-properties.cpp:1838
 #: ../src/ui/dialog/inkscape-preferences.cpp:2236
@@ -24601,7 +24600,7 @@ msgstr "Vinkel på X-axeln"
 
 #: ../src/ui/dialog/document-properties.cpp:1840
 msgid "Ang_le Z:"
-msgstr "Ang_le Z:"
+msgstr "Vin_kel Z:"
 
 #: ../src/ui/dialog/document-properties.cpp:1840
 #: ../src/ui/dialog/inkscape-preferences.cpp:2237
@@ -25530,7 +25529,7 @@ msgstr ""
 #: ../src/ui/dialog/filter-effects-dialog.cpp:2957
 #: ../src/ui/dialog/filter-effects-dialog.cpp:2998
 msgid "Preserve Alpha"
-msgstr "Bevara Alfa"
+msgstr "Bevara alfa"
 
 #: ../src/ui/dialog/filter-effects-dialog.cpp:2957
 #: ../src/ui/dialog/filter-effects-dialog.cpp:2998
@@ -27748,7 +27747,7 @@ msgstr ""
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:1160
 msgid "Linear gradient _angle:"
-msgstr "Linjär gradient _angle:"
+msgstr "Linjär gradient_vinkel:"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:1161
 msgid ""
@@ -32358,7 +32357,7 @@ msgstr "Grupp från symbol"
 
 #: ../src/ui/dialog/symbols.cpp:1014 ../src/ui/dialog/symbols.cpp:1033
 msgid "Unnamed Symbols"
-msgstr "Ej namngivna symboler"
+msgstr "Inte namngivna symboler"
 
 #. TRANSLATORS: Test string used in text and font dialog (when no
 #. * text has been entered) to get a preview of the font. Choose
@@ -36786,7 +36785,7 @@ msgstr "Funktionsinställningar i CSS-form (t.ex. \"wxyz\" eller \"wxyz\" 3)."
 #: ../src/ui/widget/font-variations.cpp:54
 msgctxt "Variable font axis"
 msgid "Grade"
-msgstr "Betyg"
+msgstr "Grad"
 
 #: ../src/ui/widget/font-variations.cpp:54
 msgid ""
@@ -37509,7 +37508,7 @@ msgstr "Applikationer"
 
 #: ../src/ui/widget/preferences-widget.cpp:815
 msgid "Select an editor"
-msgstr "Välj en redaktör"
+msgstr "Välj en redigerare"
 
 #: ../src/ui/widget/preferences-widget.cpp:880
 msgid "Reset to default directory"
@@ -37603,7 +37602,7 @@ msgstr "Inget streck, mittklicka för svart streck"
 #: ../src/ui/widget/selected-style.cpp:77 ../src/ui/widget/selected-style.cpp:78
 #: ../src/ui/widget/style-swatch.cpp:273
 msgid "<b>Unset</b>"
-msgstr "<b>Ej satt</b>"
+msgstr "<b>Inte satt</b>"
 
 #: ../src/ui/widget/selected-style.cpp:79 ../src/ui/widget/selected-style.cpp:80
 msgid "≠"
@@ -37625,7 +37624,7 @@ msgstr "Mönster (fyllning)"
 #: ../src/ui/widget/selected-style.cpp:82 ../src/ui/widget/selected-style.cpp:84
 #: ../src/ui/widget/style-swatch.cpp:252
 msgid "Pattern (stroke)"
-msgstr "Mönster (stroke)"
+msgstr "Mönster (streck)"
 
 #: ../src/ui/widget/selected-style.cpp:83 ../src/ui/widget/selected-style.cpp:84
 msgid "Hatch"
@@ -40834,7 +40833,7 @@ msgstr "_Släpp mask"
 
 #: ../share/ui/menus.ui:847
 msgid "Patter_n"
-msgstr "Mönster"
+msgstr "Mönst_er"
 
 #: ../share/ui/menus.ui:850
 msgid "Objects to Patter_n"
@@ -40842,7 +40841,7 @@ msgstr "Objekt till mönster"
 
 #: ../share/ui/menus.ui:854
 msgid "Pattern to _Objects"
-msgstr "Mönster till objekt"
+msgstr "Mönster till _objekt"
 
 #: ../share/ui/menus.ui:861
 msgid "Objects to _Marker"
@@ -41153,7 +41152,7 @@ msgstr "Perspektivlinjernas vinkel i x-riktning"
 
 #: ../share/ui/toolbar-box3d.ui:31
 msgid "Angle X"
-msgstr "Betraktningsvinkel X"
+msgstr "Vinkel X"
 
 #: ../share/ui/toolbar-box3d.ui:51
 msgid ""
@@ -41169,7 +41168,7 @@ msgstr "Perspektivlinjernas vinkel i y-riktning"
 
 #: ../share/ui/toolbar-box3d.ui:65
 msgid "Angle Y"
-msgstr "Betraktningsvinkel Y"
+msgstr "Vinkel Y"
 
 #: ../share/ui/toolbar-box3d.ui:86
 msgid ""
@@ -41185,7 +41184,7 @@ msgstr "Perspektivlinjernas vinkel i z-riktning"
 
 #: ../share/ui/toolbar-box3d.ui:99
 msgid "Angle Z"
-msgstr "Betraktningsvinkel Z"
+msgstr "Vinkel Z"
 
 #: ../share/ui/toolbar-box3d.ui:120
 msgid ""
@@ -45071,7 +45070,7 @@ msgstr "Angulära divisioner"
 
 #: ../share/extensions/grid_polar.inx:23
 msgid "Angle Divisions:"
-msgstr "Angle Divisions:"
+msgstr "Vinkelindelningar:"
 
 #: ../share/extensions/grid_polar.inx:24
 msgid "Angle Divisions at Centre:"
@@ -47534,7 +47533,7 @@ msgid ""
 "Don't remove editor-specific elements and attributes. Currently supported: "
 "Inkscape, Sodipodi and Adobe Illustrator."
 msgstr ""
-"Ta inte bort redaktörsspecifika element och attribut. Stöds för närvarande: "
+"Ta inte bort redigerarspecifika element och attribut. Stöds för närvarande: "
 "Inkscape, Sodipodi och Adobe Illustrator."
 
 #
@@ -49641,11 +49640,11 @@ msgstr "Månader per rad:"
 
 #: ../share/extensions/svgcalendar.inx:25
 msgid "Month Width:"
-msgstr "Månad Bredd:"
+msgstr "Månadsbredd:"
 
 #: ../share/extensions/svgcalendar.inx:26
 msgid "Month Margin:"
-msgstr "Månad Marginal:"
+msgstr "Månadsmarginal:"
 
 #: ../share/extensions/svgcalendar.inx:29
 msgid "Year color:"
@@ -49653,7 +49652,7 @@ msgstr "Årsfärg:"
 
 #: ../share/extensions/svgcalendar.inx:30
 msgid "Month color:"
-msgstr "Månadens färg:"
+msgstr "Månadsfärg:"
 
 #: ../share/extensions/svgcalendar.inx:31
 msgid "Weekday name color:"
@@ -49681,7 +49680,7 @@ msgstr "Årsskrift:"
 
 #: ../share/extensions/svgcalendar.inx:39
 msgid "Month font:"
-msgstr "Månadens typsnitt:"
+msgstr "Månadstypsnitt:"
 
 #: ../share/extensions/svgcalendar.inx:40
 msgid "Weekday name font:"
@@ -49701,7 +49700,7 @@ msgstr "Du kan ställa in namnen för andra språk:"
 
 #: ../share/extensions/svgcalendar.inx:45
 msgid "Month names:"
-msgstr "Månadens namn:"
+msgstr "Månadsnamn:"
 
 #: ../share/extensions/svgcalendar.inx:45
 msgid ""
@@ -50858,7 +50857,7 @@ msgstr "Mönsterredigering på skärmen"
 
 #: ../org.inkscape.Inkscape.appdata.xml.in:67
 msgid "Pattern editor"
-msgstr "Mönsterredaktör"
+msgstr "Mönsterredigerare"
 
 #: ../org.inkscape.Inkscape.appdata.xml.in:68
 msgid "Pages margins and bleed"
@@ -51163,7 +51162,7 @@ msgstr "Skapa och redigera SVG-bilder"
 
 #: ../org.inkscape.Inkscape.desktop.template:8
 msgid "image;editor;vector;drawing;"
-msgstr "bild; redaktör; vektor; ritning;"
+msgstr "bild; redigerare; vektor; ritning;"
 
 #: ../org.inkscape.Inkscape.desktop.template:20
 msgid "Open a New Window"
