--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-16 16:09+0200\n"
+"PO-Revision-Date: 2025-05-16 16:15+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -14248,11 +14248,11 @@ msgstr "Det gick inte att ställa in Document"
 
 #: ../src/extension/internal/gimpgrad.cpp:255
 msgid "GIMP Gradients"
-msgstr "GIMP Gradienter"
+msgstr "GIMP-gradienter"
 
 #: ../src/extension/internal/gimpgrad.cpp:260
 msgid "GIMP Gradient (*.ggr)"
-msgstr "GIMP gradient (*.ggr)"
+msgstr "GIMP-gradient (*.ggr)"
 
 #: ../src/extension/internal/gimpgrad.cpp:261
 msgid "Gradients used in GIMP"
@@ -29034,7 +29034,7 @@ msgstr "Listar alla möjliga utdatatillägg i valet i exportdialogen."
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2365
 msgid "_Grab sensitivity:"
-msgstr "_Grip känsligheten:"
+msgstr "_Gripkänslighet:"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2365
 #: ../src/ui/dialog/inkscape-preferences.cpp:2368
@@ -29921,7 +29921,7 @@ msgstr ""
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2743
 msgid "_Weight factor:"
-msgstr "Viktfaktor:"
+msgstr "Vi_ktfaktor:"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2744
 msgid ""
