--- a/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
+++ b/Inkscape/Inkscapes nybörjarguide/calligraphy-tool.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-15 19:04+0200\n"
+"PO-Revision-Date: 2025-05-16 16:24+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -59,7 +59,7 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:19 3f5ef9ef76404ebbbf24083e4a871fc1
 msgid "Dip Pen"
-msgstr "Dopppenna"
+msgstr "Bläckpenna"
 
 #: ../../source/calligraphy-tool.rst:20 1985b2ed3047469f89ae9e092803c410
 msgid "Emulates a bevelled pen tip."
@@ -111,12 +111,12 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:38 bbeb81ca1b5044ae910ab996cc177783
 msgid "Dip Pen setting of Calligraphy Tool"
-msgstr "Dip Pen inställning av kalligrafiverktyg"
+msgstr "Bläckpenna-inställning för kalligrafiverktyg"
 
 #: ../../source/calligraphy-tool.rst:42 cfbdbb46f18a49438620941c01689ab3
 msgid "The ends of a line drawn with the :guilabel:`Dip Pen` setting are cusped."
 msgstr ""
-"Ändarna på en linje som ritats med inställningen :guilabel:`Dip Pen` är "
+"Ändarna på en linje som ritats med inställningen :guilabel:`Bläckpenna` är "
 "spetsiga."
 
 #: ../../source/calligraphy-tool.rst:44 b57e86d47fa740e88da3420416f663fe
@@ -128,7 +128,7 @@ msgid ""
 "With the :guilabel:`Marker` setting, the paths look smooth and their ends are "
 "rounded."
 msgstr ""
-"Med inställningen :guilabel:`Marker` ser slingorna släta ut och ändarna är "
+"Med inställningen :guilabel:`Markör` ser slingorna släta ut och ändarna är "
 "rundade."
 
 #: ../../source/calligraphy-tool.rst:51 3ba218b2c8414f93a2b300c11623babd
@@ -137,7 +137,7 @@ msgstr "Inställning av kalligrafiverktygets pensel"
 
 #: ../../source/calligraphy-tool.rst:55 c4458d3c183545989a8408211887163d
 msgid "The setting :guilabel:`Brush` creates slightly rounded and uneven strokes."
-msgstr "Inställningen :guilabel:`Brush` skapar lätt rundade och ojämna streck."
+msgstr "Inställningen :guilabel:`Pensel` skapar lätt rundade och ojämna streck."
 
 #: ../../source/calligraphy-tool.rst:57 4b476562352e456796c41a89198a5c1b
 msgid "Wiggly setting of Calligraphy Tool"
@@ -166,7 +166,7 @@ msgid ""
 "With the calligraphy tool setting :guilabel:`Tracing`, drawings that look like "
 "an old engraving can be created. The image below serves as a model."
 msgstr ""
-"Med kalligrafiverktygets inställning :guilabel:`Tracing` kan man skapa "
+"Med kalligrafiverktygets inställning :guilabel:`Spårning` kan man skapa "
 "teckningar som ser ut som en gammal gravyr. Bilden nedan fungerar som en modell."
 
 #: ../../source/calligraphy-tool.rst:76 d338ddeb4f034562831c38b8048c1cc5
@@ -181,7 +181,7 @@ msgstr ""
 
 #: ../../source/calligraphy-tool.rst:80 7e88f3b2049a4d78bc4ad689083b1a9b
 msgid "Every brush is a result of the following parameters:"
-msgstr "Varje borste är ett resultat av följande parametrar:"
+msgstr "Varje pensel är ett resultat av följande parametrar:"
 
 #: ../../source/calligraphy-tool.rst:82 b84793ca1edf4ccf82ef0ec497ea6e63
 msgid "Width"
@@ -250,7 +250,7 @@ msgstr "Bestämmer formen på penseldragets ändar."
 
 #: ../../source/calligraphy-tool.rst:107 953147fec62d4df08454c8cd8e30f79c
 msgid "Tremor"
-msgstr "Tremor"
+msgstr "Skakning"
 
 #: ../../source/calligraphy-tool.rst:108 753a1cdbc94b446c8deb7c0737a766cf
 msgid "Adds a little randomness to the brush stroke."
