--- a/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
+++ b/Inkscape/Inkscapes nybörjarguide/managing-workspace.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Inkscape Beginners' Guide 1.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-13 20:11+0200\n"
-"PO-Revision-Date: 2025-05-16 09:16+0200\n"
+"PO-Revision-Date: 2025-05-16 16:21+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: sv <LL@li.org>\n"
 "Language: sv\n"
@@ -60,7 +60,7 @@ msgid ""
 "the :guilabel:`Page Size` section of the same :guilabel:`Page` tab."
 msgstr ""
 "Standardmåttenheten för sidstorlek kan ändras i "
-"avsnittet :guilabel:`Page Size` på samma flik :guilabel:`Page`."
+"avsnittet :guilabel:`Sidstorlek` på samma flik :guilabel:`Sida`."
 
 #: ../../source/managing-workspace.rst:20 2533e847dcff4997aeb2c5e0bd7aa789
 msgid ""
@@ -109,8 +109,8 @@ msgstr ""
 "I Inkscape ser duken vit ut. Även om den inte använder det traditionella "
 "rutmönstret för att indikera transparens (som standard) är den verkligen "
 "transparent. Om du vill se ett rutmönster för transparens, kontrollera "
-"alternativet :guilabel:`Checkerboard background` i "
-"avsnittet :guilabel:`Background` på fliken Page."
+"alternativet :guilabel:`Schackbrädesbakgrund` i "
+"avsnittet :guilabel:`Bakgrund` på fliken Sida."
 
 #: ../../source/managing-workspace.rst:41 05b3a65b4ebb46beaf43934f5d5c4709
 msgid ""
@@ -134,11 +134,11 @@ msgid ""
 "when you export to PNG."
 msgstr ""
 "Ett annat sätt att ändra detta är att klicka på färgfältet i "
-"avsnittet :guilabel:`Background` på fliken :guilabel:`Page` och ställa "
-"in skjutreglaget :guilabel:`A` (\"A\" för :term:`Alpha`) på 255, eller "
-"hela vägen till höger. Du kan också ändra färgen om du vill. Observera "
-"att den här inställningen bara påverkar hur bilden ser ut i Inkscape "
-"eller när du exporterar till PNG."
+"avsnittet :guilabel:`Bakgrund` på fliken :guilabel:`Sida` och ställa in "
+"skjutreglaget :guilabel:`A` (\"A\" för :term:`Alfa`) på 255, eller hela "
+"vägen till höger. Du kan också ändra färgen om du vill. Observera att "
+"den här inställningen bara påverkar hur bilden ser ut i Inkscape eller "
+"när du exporterar till PNG."
 
 #: ../../source/managing-workspace.rst:56 2d080d2dbea34f1c86b7f2391650fd5c
 msgid "Options in 'View' Menu"
@@ -151,5 +151,5 @@ msgid ""
 "Hide`. The canvas can be moved using the middle mouse button."
 msgstr ""
 "Många använder Inkscape utan rullningslister och utan snapping. Alla "
-"onödiga fält kan döljas i menyn :menuselection:`View --> Show/Hide`. "
-"Canvas kan flyttas med hjälp av den mellersta musknappen."
+"onödiga fält kan döljas i menyn :menuselection:`Visa --> Visa/Dölj`. "
+"Duken kan flyttas med hjälp av den mellersta musknappen."
