--- a/Inkscape/inkscape.po
+++ b/Inkscape/inkscape.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: inkscape\n"
 "Report-Msgid-Bugs-To: inkscape-translator@lists.inkscape.org\n"
 "POT-Creation-Date: 2025-05-12 20:42+0200\n"
-"PO-Revision-Date: 2025-05-16 16:15+0200\n"
+"PO-Revision-Date: 2025-05-19 12:02+0200\n"
 "Last-Translator: Daniel Nylander <github@danielnylander.se>\n"
 "Language-Team: Svenska <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -6181,7 +6181,7 @@ msgstr "Skriv ut Inkscapes versionsnummer och avsluta"
 
 #: ../src/actions/actions-base.cpp:219
 msgid "Active Window: Start Call"
-msgstr "Aktivt fönster: Starta samtal"
+msgstr "Aktivt fönster: Starta anrop"
 
 #: ../src/actions/actions-base.cpp:219
 msgid "Start execution in active window"
@@ -6189,7 +6189,7 @@ msgstr "Starta körning i aktivt fönster"
 
 #: ../src/actions/actions-base.cpp:220
 msgid "Active Window: End Call"
-msgstr "Aktivt fönster: Avsluta samtal"
+msgstr "Aktivt fönster: Avsluta anrop"
 
 #: ../src/actions/actions-base.cpp:220
 msgid "End execution in active window"
@@ -7062,7 +7062,7 @@ msgstr "Öppna objektets egenskaper"
 
 #: ../src/actions/actions-dialogs.cpp:51
 msgid "Edit the object attributes (context dependent)..."
-msgstr "Sätt attribut..."
+msgstr "Ställ in attribut..."
 
 #: ../src/actions/actions-dialogs.cpp:52
 msgid "Open Objects"
@@ -7548,7 +7548,7 @@ msgstr "Kameleont Fyllning"
 #: ../src/actions/actions-edit.cpp:326
 msgid "Set each object's color to the average of all colors inside that shape."
 msgstr ""
-"Sätt varje objekts färg till genomsnittet av alla färger inuti den formen."
+"Ställ in varje objekts färg till genomsnittet av alla färger inuti den formen."
 
 #: ../src/actions/actions-effect.cpp:77
 msgctxt "Action Section"
@@ -8702,7 +8702,7 @@ msgstr "Ange två kommaseparerade siffror: horisontell,vertikal"
 
 #: ../src/actions/actions-object.cpp:193
 msgid "Set clipping path"
-msgstr "Sätt beskärningsslinga"
+msgstr "Ställ in beskärningsslinga"
 
 #: ../src/actions/actions-object.cpp:204
 msgid "Set Inverse Clip(LPE)"
@@ -8714,7 +8714,7 @@ msgstr "Frigör beskärningsslinga"
 
 #: ../src/actions/actions-object.cpp:233
 msgid "Set mask"
-msgstr "Sätt mask"
+msgstr "Ställ in mask"
 
 #: ../src/actions/actions-object.cpp:244
 msgid "Set Inverse Mask (LPE)"
@@ -9940,7 +9940,7 @@ msgstr "Text"
 
 #: ../src/actions/actions-text.cpp:75
 msgid "Put on Path"
-msgstr "Sätt på slingan"
+msgstr "Ställ in på slingan"
 
 #: ../src/actions/actions-text.cpp:75 ../src/text-chemistry.cpp:170
 msgid "Put text on path"
@@ -10748,7 +10748,7 @@ msgstr "Blå"
 
 #: ../src/colors/spaces/components.cpp:39
 msgid "<sub>l</sub>_R"
-msgstr "<sub>l_R</sub>"
+msgstr "<sub>l</sub>_R"
 
 #: ../src/colors/spaces/components.cpp:39
 msgid "Linear Red"
@@ -10756,7 +10756,7 @@ msgstr "Linjär röd"
 
 #: ../src/colors/spaces/components.cpp:40
 msgid "<sub>l</sub>_G"
-msgstr "<sub>l_G</sub>"
+msgstr "<sub>l</sub>_G"
 
 #: ../src/colors/spaces/components.cpp:40
 msgid "Linear Green"
@@ -10764,7 +10764,7 @@ msgstr "Linjär grön"
 
 #: ../src/colors/spaces/components.cpp:41
 msgid "<sub>l</sub>_B"
-msgstr "<sub>l_B</sub>"
+msgstr "<sub>l</sub>_B"
 
 #: ../src/colors/spaces/components.cpp:41
 msgid "Linear Blue"
@@ -10807,7 +10807,7 @@ msgstr "Mättnad"
 #: ../src/colors/spaces/components.cpp:112
 #: ../src/colors/spaces/components.cpp:136
 msgid "_L"
-msgstr "~L~äs in"
+msgstr "_L"
 
 #: ../src/colors/spaces/components.cpp:49 ../src/colors/spaces/components.cpp:82
 #: ../src/colors/spaces/components.cpp:90
@@ -10885,26 +10885,26 @@ msgstr "%s för:% s%s"
 
 #: ../src/colors/spaces/components.cpp:82
 msgid "_L*"
-msgstr "~L~äs in"
+msgstr "_L*"
 
 #: ../src/colors/spaces/components.cpp:88 ../src/colors/spaces/components.cpp:96
 #: ../src/colors/spaces/components.cpp:130
 msgid "_H<sub>ok</sub>"
-msgstr "<sub>_Hok</sub>"
+msgstr "_H<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:89 ../src/colors/spaces/components.cpp:97
 msgid "_S<sub>ok</sub>"
-msgstr "<sub>_Sok</sub>"
+msgstr "_S<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:90
 #: ../src/colors/spaces/components.cpp:120
 #: ../src/colors/spaces/components.cpp:128
 msgid "_L<sub>ok</sub>"
-msgstr "<sub>_Lok</sub>"
+msgstr "_L<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:98
 msgid "_V<sub>ok</sub>"
-msgstr "<sub>_Vok</sub>"
+msgstr "_V<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:104
 #: ../src/colors/spaces/components.cpp:112
@@ -10930,7 +10930,7 @@ msgstr "Chroma V"
 
 #: ../src/colors/spaces/components.cpp:121
 msgid "_A<sub>ok</sub>"
-msgstr "<sub>_Aok</sub>"
+msgstr "_A<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:121
 #: ../src/colors/spaces/components.cpp:137
@@ -10939,7 +10939,7 @@ msgstr "Komponent A"
 
 #: ../src/colors/spaces/components.cpp:122
 msgid "_B<sub>ok</sub>"
-msgstr "<sub>_Bok</sub>"
+msgstr "_B<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:122
 #: ../src/colors/spaces/components.cpp:138
@@ -10948,7 +10948,7 @@ msgstr "Komponent B"
 
 #: ../src/colors/spaces/components.cpp:129
 msgid "_C<sub>ok</sub>"
-msgstr "<sub>_Cok</sub>"
+msgstr "_C<sub>ok</sub>"
 
 #: ../src/colors/spaces/components.cpp:137
 msgid "_A"
@@ -22493,7 +22493,7 @@ msgstr "Skev"
 
 #: ../src/seltrans.cpp:509
 msgid "Set center"
-msgstr "Sätt mittpunkt"
+msgstr "Ställ in mittpunkt"
 
 #: ../src/seltrans.cpp:662
 msgid "Stamp"
@@ -22965,7 +22965,7 @@ msgstr "Ställ in klipp_grupp"
 
 #: ../src/ui/contextmenu.cpp:317
 msgid "Set Mask"
-msgstr "Sätt mask"
+msgstr "Ställ in mask"
 
 #: ../src/ui/contextmenu.cpp:320
 msgid "Release Mask"
@@ -23921,11 +23921,11 @@ msgstr "Ta bort fyllningsfärg"
 
 #: ../src/ui/dialog/color-item.cpp:355 ../src/ui/dialog/color-item.cpp:361
 msgid "Set stroke color from swatch"
-msgstr "Sätt linjefärg från färgpalett"
+msgstr "Ställ in linjefärg från färgpalett"
 
 #: ../src/ui/dialog/color-item.cpp:355 ../src/ui/dialog/color-item.cpp:361
 msgid "Set fill color from swatch"
-msgstr "Sätt fyllningsfärg från färgpalett"
+msgstr "Ställ in fyllningsfärg från färgpalett"
 
 #. TRANSLATORS: An item in context menu on a colour in the swatches
 #: ../src/ui/dialog/color-item.cpp:383
@@ -24504,7 +24504,7 @@ msgstr "Ställ in vinkel från bildförhållande:"
 
 #: ../src/ui/dialog/document-properties.cpp:1768
 msgid "Set"
-msgstr "Sätt"
+msgstr "Ställ in"
 
 #. TRANSLATORS: Axonometric grid looks like a pattern of parallelograms. Their width to height proportions
 #. can be manipulated by changing angles in the axonometric grid. This DX/DY ratio does just that.
@@ -29111,7 +29111,7 @@ msgstr "Attribut på samma rad"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2387
 msgid "Put attributes on the same line as the element tag"
-msgstr "Sätt attribut på samma rad som elementtaggen"
+msgstr "Ställ in attribut på samma rad som elementtaggen"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2390
 msgid "_Indent, spaces:"
@@ -29122,8 +29122,8 @@ msgid ""
 "The number of spaces to use for indenting nested elements; set to 0 for no "
 "indentation"
 msgstr ""
-"Antalet mellanrum som används för att indentera underliggande element; sätt "
-"till 0 för att stänga av indentering"
+"Antalet mellanrum som används för att indentera underliggande element; ställ "
+"in till 0 för att stänga av indentering"
 
 #: ../src/ui/dialog/inkscape-preferences.cpp:2392
 #: ../share/ui/object-attributes.glade:947
@@ -31673,7 +31673,7 @@ msgstr "Kontroll för att bevara bildförhållandet på bilder"
 
 #: ../src/ui/dialog/object-properties.cpp:258
 msgid "_Set"
-msgstr "Sätt"
+msgstr "Ställ in"
 
 #: ../src/ui/dialog/object-properties.cpp:281
 msgid ""
@@ -31698,15 +31698,15 @@ msgstr "Id finns redan! "
 
 #: ../src/ui/dialog/object-properties.cpp:434
 msgid "Set object ID"
-msgstr "Sätt objekt-ID"
+msgstr "Ställ in objekt-ID"
 
 #: ../src/ui/dialog/object-properties.cpp:448
 msgid "Set object label"
-msgstr "Sätt objektetikett"
+msgstr "Ställ in objektetikett"
 
 #: ../src/ui/dialog/object-properties.cpp:453
 msgid "Set object title"
-msgstr "Sätt objekttitel"
+msgstr "Ställ in objekttitel"
 
 #: ../src/ui/dialog/object-properties.cpp:460
 msgid "Set image DPI"
@@ -31714,7 +31714,7 @@ msgstr "Ställ in bildens DPI"
 
 #: ../src/ui/dialog/object-properties.cpp:468
 msgid "Set object description"
-msgstr "Sätt objektbeskrivning"
+msgstr "Ställ in objektbeskrivning"
 
 #: ../src/ui/dialog/object-properties.cpp:481 ../src/ui/dialog/objects.cpp:1333
 msgid "Set item highlight color"
@@ -32134,7 +32134,7 @@ msgstr ""
 
 #: ../src/ui/dialog/svg-fonts-dialog.cpp:887
 msgid "Set up canvas"
-msgstr "Sätt upp målarduk"
+msgstr "Ställ in upp målarduk"
 
 #: ../src/ui/dialog/svg-fonts-dialog.cpp:1041
 msgid "Add glyph"
@@ -34004,7 +34004,7 @@ msgstr "Tilldela gradient till objekt"
 #: ../src/ui/toolbar/gradient-toolbar.cpp:601
 #: ../src/ui/widget/gradient-editor.cpp:499
 msgid "Set gradient repeat"
-msgstr "Sätt repetition för gradient"
+msgstr "Ställ in repetition för gradient"
 
 #: ../src/ui/toolbar/gradient-toolbar.cpp:702
 #: ../src/ui/widget/gradient-editor.cpp:645
@@ -34109,7 +34109,7 @@ msgstr "Ange typ av nät"
 
 #: ../src/ui/toolbar/page-toolbar.cpp:140
 msgid "ex.: 100x100cm"
-msgstr "ex.: 100x100cm"
+msgstr "t.ex.: 100x100cm"
 
 #: ../src/ui/toolbar/page-toolbar.cpp:141
 msgid ""
@@ -34772,7 +34772,7 @@ msgstr "Låt förbindelser ignorerar markerade objekt"
 
 #: ../src/ui/tools/dropper-tool.cpp:278
 msgid "Set picked color"
-msgstr "Sätt vald färg"
+msgstr "Ställ in vald färg"
 
 #: ../src/ui/tools/dropper-tool.cpp:320
 #, c-format
@@ -34889,7 +34889,7 @@ msgstr "Fyll i inhängnat område"
 
 #: ../src/ui/tools/flood-tool.cpp:1032
 msgid "Set style on object"
-msgstr "Sätt objektstil"
+msgstr "Ställ in objektstil"
 
 #: ../src/ui/tools/flood-tool.cpp:1074
 msgid "<b>Draw over</b> areas to add to fill, hold <b>Alt</b> for touch fill"
@@ -36232,11 +36232,11 @@ msgstr "Ändra fyllningsregel"
 
 #: ../src/ui/widget/fill-style.cpp:367 ../src/ui/widget/fill-style.cpp:446
 msgid "Set fill color"
-msgstr "Sätt fyllningsfärg"
+msgstr "Ställ in fyllningsfärg"
 
 #: ../src/ui/widget/fill-style.cpp:367 ../src/ui/widget/fill-style.cpp:446
 msgid "Set stroke color"
-msgstr "Sätt linjefärg"
+msgstr "Ställ in linjefärg"
 
 #: ../src/ui/widget/fill-style.cpp:437 ../src/ui/widget/selected-style.cpp:286
 msgid "Remove fill"
@@ -36248,11 +36248,11 @@ msgstr "Ta bort kantlinje"
 
 #: ../src/ui/widget/fill-style.cpp:520
 msgid "Set gradient on fill"
-msgstr "Sätt gradient för fyllningen"
+msgstr "Ställ in gradient för fyllningen"
 
 #: ../src/ui/widget/fill-style.cpp:520
 msgid "Set gradient on stroke"
-msgstr "Sätt gradient för linjen"
+msgstr "Ställ in gradient för linjen"
 
 #: ../src/ui/widget/fill-style.cpp:613
 msgid "Set mesh on fill"
@@ -36260,7 +36260,7 @@ msgstr "Ställ in nät på fyllning"
 
 #: ../src/ui/widget/fill-style.cpp:613
 msgid "Set mesh on stroke"
-msgstr "Sätt rutnät för linje"
+msgstr "Ställ in rutnät för linje"
 
 #: ../src/ui/widget/fill-style.cpp:695
 msgid "Set pattern on fill"
@@ -38054,7 +38054,7 @@ msgstr "Ställ in slagmitning"
 
 #: ../src/ui/widget/stroke-style.cpp:1148
 msgid "Set stroke style"
-msgstr "Sätt linjestil"
+msgstr "Ställ in linjestil"
 
 #: ../src/ui/widget/style-swatch.cpp:102
 #: ../share/ui/dialog-paint-servers.glade:45 ../share/extensions/frame.inx:25
@@ -38247,7 +38247,7 @@ msgstr[1] ""
 
 #: ../src/widgets/sp-attribute-widget.cpp:212
 msgid "Set attribute"
-msgstr "Sätt attribut"
+msgstr "Ställ in attribut"
 
 #. This symbolizes precision of 0 digits after the decimal separator.
 #: ../share/ui/attribute-edit-component.glade:56
@@ -39859,7 +39859,7 @@ msgstr "Dimensioner"
 #: ../share/ui/object-attributes.glade:897 ../share/ui/toolbar-rect.ui:40
 #: ../share/ui/toolbar-select.ui:390
 msgid "W"
-msgstr "W"
+msgstr "B"
 
 #: ../share/ui/object-attributes.glade:357
 msgid "Width of rectangle (without stroke)"
@@ -40965,7 +40965,7 @@ msgstr "Vänd rikting"
 
 #: ../share/ui/menus.ui:1082
 msgid "Path E_ffects..."
-msgstr "Slinge_effekter..."
+msgstr "Sling_effekter..."
 
 #: ../share/ui/menus.ui:1088
 msgid "Paste Path _Effect"
@@ -46313,27 +46313,27 @@ msgstr "Växla till bildläge:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:23
 msgid "Set path width to default:"
-msgstr "Sätt slingbredd till standard:"
+msgstr "Ställ in slingbredd till standard:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:24
 msgid "Set path width to 1:"
-msgstr "Sätt slingbredd till 1:"
+msgstr "Ställ in slingbredd till 1:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:25
 msgid "Set path width to 3:"
-msgstr "Sätt slingbredd till 3:"
+msgstr "Ställ in slingbredd till 3:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:26
 msgid "Set path width to 5:"
-msgstr "Sätt slingbredd till 5:"
+msgstr "Ställ in slingbredd till 5:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:27
 msgid "Set path width to 7:"
-msgstr "Sätt slingbredd till 7:"
+msgstr "Ställ in slingbredd till 7:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:28
 msgid "Set path width to 9:"
-msgstr "Sätt slingbredd till 9:"
+msgstr "Ställ in slingbredd till 9:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:29
 msgid "Undo last path segment:"
@@ -46345,39 +46345,39 @@ msgstr "Slingfärger"
 
 #: ../share/extensions/jessyink_key_bindings.inx:32
 msgid "Set path color to blue:"
-msgstr "Sätt slingfärg till blå:"
+msgstr "Ställ in slingfärg till blå:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:33
 msgid "Set path color to cyan:"
-msgstr "Sätt slingfärg till cyan:"
+msgstr "Ställ in slingfärg till cyan:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:34
 msgid "Set path color to green:"
-msgstr "Sätt slingfärg till grön:"
+msgstr "Ställ in slingfärg till grön:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:35
 msgid "Set path color to black:"
-msgstr "Sätt slingfärg till svart:"
+msgstr "Ställ in slingfärg till svart:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:36
 msgid "Set path color to magenta:"
-msgstr "Sätt slingfärg till magenta:"
+msgstr "Ställ in slingfärg till magenta:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:37
 msgid "Set path color to orange:"
-msgstr "Sätt slingfärg till orange:"
+msgstr "Ställ in slingfärg till orange:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:38
 msgid "Set path color to red:"
-msgstr "Sätt slingfärg till röd:"
+msgstr "Ställ in slingfärg till röd:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:39
 msgid "Set path color to white:"
-msgstr "Sätt slingfärg till vit:"
+msgstr "Ställ in slingfärg till vit:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:40
 msgid "Set path color to yellow:"
-msgstr "Sätt slingfärg till gul:"
+msgstr "Ställ in slingfärg till gul:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:42
 msgid "Index mode"
@@ -46417,7 +46417,7 @@ msgstr "Öka antal kolumner:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:54
 msgid "Set number of columns to default:"
-msgstr "Sätt antal kolumner till standard:"
+msgstr "Ställ in antal kolumner till standard:"
 
 #: ../share/extensions/jessyink_key_bindings.inx:57
 msgid ""
@@ -46985,15 +46985,15 @@ msgstr "Invertera fyllnings- och strokefärger"
 
 #: ../share/extensions/markers_strokepaint.inx:13
 msgid "Assign alpha"
-msgstr "Sätt opacitet"
+msgstr "Ställ in opacitet"
 
 #: ../share/extensions/markers_strokepaint.inx:18
 msgid "Assign fill color"
-msgstr "Sätt fyllningsfärg"
+msgstr "Ställ in fyllningsfärg"
 
 #: ../share/extensions/markers_strokepaint.inx:22
 msgid "Assign stroke color"
-msgstr "Sätt linjefärg"
+msgstr "Ställ in linjefärg"
 
 #: ../share/extensions/markers_strokepaint.inx:28
 msgid "Modify in Place"
@@ -48434,7 +48434,7 @@ msgid ""
 "The force pushing down the pen in grams. Set to 0 to omit command; most "
 "plotters ignore this command (default: 0)"
 msgstr ""
-"Kraften som trycker ner pennan i gram. Sätt till 0 för att utelämna "
+"Kraften som trycker ner pennan i gram. Ställ in till 0 för att utelämna "
 "kommandot; de flesta plottrar ignorerar detta kommando (standard: 0)"
 
 #: ../share/extensions/plotter.inx:70
@@ -48445,7 +48445,7 @@ msgid ""
 "with the pen number (e.g. 'Pen 3 Speed 10')."
 msgstr ""
 "Den hastighet med vilken pennan kommer att röra sig i centimeter eller "
-"millimeter per sekund (beroende på plottermodell). Sätt till 0 för att "
+"millimeter per sekund (beroende på plottermodell). Ställ in till 0 för att "
 "utelämna kommandot. De flesta plottrar ignorerar detta kommando (standard: "
 "0). Kan definieras i lagernamnet tillsammans med pennans nummer (t.ex. \"Pen "
 "3 Speed 10\")."
