--- a/GNU Mailman/django-mailman3.sv.po
+++ b/GNU Mailman/django-mailman3.sv.po
@@ -1,11 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Swedish translation for GNU Mailman Django 3.
+# Copyright (C) 2025 GNU
+# This file is distributed under the same license as the mailman package.
+# Daniel Nylander <po@danielnylander.se>, 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: GNU Mailman django 3\n"
 "Report-Msgid-Bugs-To: mailman-developers@python.org\n"
 "POT-Creation-Date: 2024-12-23 04:02+0000\n"
 "PO-Revision-Date: 2025-06-06 17:27+0000\n"
