--- a/GNU Mailman/gnu-mailman-hyperkitty-sv.po
+++ b/GNU Mailman/gnu-mailman-hyperkitty-sv.po
@@ -1,11 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Swedish translation for GNU Mailman Hyper Kitty.
+# Copyright (C) 2025 GNU
+# This file is distributed under the same license as the mailman package.
+# Daniel Nylander <po@danielnylander.se>, 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: GNU Mailman Hyper Kitty\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-01-12 21:08+0000\n"
 "PO-Revision-Date: 2025-06-06 17:24+0000\n"
