--- a/GNU Mailman/gnu-mailman-mailman-sv.po
+++ b/GNU Mailman/gnu-mailman-mailman-sv.po
@@ -1,11 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Swedish translation for GNU Mailman core.
+# Copyright (C) 2025 GNU
+# This file is distributed under the same license as the mailman package.
+# Daniel Nylander <po@danielnylander.se,> 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: GNU Mailman core\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-02-15 19:33-0800\n"
 "PO-Revision-Date: 2025-06-06 17:28+0000\n"
