--- a/GNU Mailman/gnu-mailman-postorius-sv.po
+++ b/GNU Mailman/gnu-mailman-postorius-sv.po
@@ -1,13 +1,13 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Swedish translation for GNU Mailman postorius.
+# Copyright (C) GNU, 2020-2025.
+# This file is distributed under the same license as the mailman package.
 # Jan Ainali <ainali.jan@gmail.com>, 2020.
 # Jonas B <joonas-b@hotmail.se>, 2021.
 # Anders Jonsson <anders.jonsson@norsjovallen.se>, 2025.
 # Daniel Nylander <daniel@danielnylander.se>, 2025.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: GNU Mailman postorius\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-04-28 21:01-0700\n"
 "PO-Revision-Date: 2025-06-06 17:28+0000\n"
